fixed scrollbar issue

--- a/front-end/src/app/job-description/job-description.component.css
+++ b/front-end/src/app/job-description/job-description.component.css
@@ -18,3 +18,6 @@ a {
 .close-icon {
     float: right;
   }
+ .mat-dialog-content {
+    overflow: hidden;
+}
